--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
+    "bulma-calendar": "^6.0.9",
+    "bulma-toast": "^2.0.3",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.1",
