--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
     "bulma-calendar": "^6.0.9",
+    "bulma-checkradio": "^1.1.1",
+    "bulma-switch": "^2.0.0",
+    "bulma-tooltip": "^3.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.1",
