--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.5.4",
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -47,6 +48,7 @@
     "bulma-calendar": "^6.0.9",
     "bulma-checkradio": "^1.1.1",
     "bulma-switch": "^2.0.0",
+    "bulma-tagsfield": "^0.1.2",
     "bulma-tooltip": "^3.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.3",
