--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.6.10",
     "vue-i18n": "^8.11.2",
     "vue-loading-overlay": "^3.3.2",
+    "vue-multiselect": "2.1.6",
     "vue-router": "3.0.7",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^3.1.0"
@@ -36,7 +37,6 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.5.4",
-    "@creativebulma/bulma-collapsible": "^1.0.4",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
