--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.5.4",
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
