--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "start": "webpack -p && node server.js"
   },
   "dependencies": {
+    "apexcharts": "^3.21.0",
     "axios": "^0.19.0",
     "bulma": "^0.9.0",
     "express": "^4.17.1",
     "firebase": "^7.19.1",
     "lodash": "^4.17.13",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.6.0",
     "vue-i18n": "^8.11.2",
     "vue-router": "3.0.7",
     "vuex": "^3.1.1",
