--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "cross-env": "^5.2.1",
     "css-loader": "^3.0.0",
+    "date-fns": "^2.16.1",
     "dotenv-defaults": "^2.0.0",
     "dotenv-webpack": "^2.0.0",
     "eslint": "^6.0.1",
