--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-vue": "^2.0.2",
-    "bulma-calendar": "^6.0.9",
     "bulma-checkradio": "^1.1.1",
     "bulma-pageloader": "^0.3.0",
     "bulma-switch": "^2.0.0",
@@ -77,6 +76,7 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^2.0.1",
+    "v-calendar": "^1.0.8",
     "vue-eslint-parser": "^6.0.4",
     "vue-lazyload": "^1.3.1",
     "vue-loader": "^15.7.0",
